--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs__testing-linting-typescript-ci-cd-repo",
+  "name": "fire-planning",
   "version": "0.1.0",
   "private": true,
   "scripts": {
